Basic html + templates

--- a/website/templates/search.html.jinja2
+++ b/website/templates/search.html.jinja2
@@ -1,5 +1,9 @@
 <!DOCTYPE html>
 <html>
+    <head>
+        <title>SHared Access Resource Ecosystem</title>
+        <link type="text/css" rel="stylesheet" href="//netdna.bootstrapcdn.com/bootstrap/3.0.0/css/bootstrap.min.css" rel="stylesheet"/>
+    </head>
     <body>
         {% for doc in results %}
             {% if doc.get('title') %}
