Implemented lazy loading for results

--- a/website/static/css/style.css
+++ b/website/static/css/style.css
@@ -88,6 +88,17 @@ button[type="submit"]{
 	padding: 10px;
 }
 
+#no-result{
+	width: 75%;
+	margin-right: auto;
+	margin-left: auto;
+	padding: 10px;
+	background-color:#353535;
+	text-align: left;
+	padding: 10px;
+	margin: 10px;
+}
+
 .jsonObject{
 	background-color:#353535;
 	opacity: 0.80;
