--- a/website/static/css/style.css
+++ b/website/static/css/style.css
@@ -40,7 +40,7 @@ strong, h2{
 	color: white;
 }
 
-#wrapper{
+#searchControls{
 	width: 100%;
 	text-align: center;
 	min-height: 100%;
@@ -110,6 +110,7 @@ button[type="submit"]{
 	margin-right: auto;
 	margin-left: auto;
 	padding: 10px;
+    text-align: left;
 }
 
 .borderObject{
