--- a/api/webview/templates/webview/base.html
+++ b/api/webview/templates/webview/base.html
@@ -8,7 +8,7 @@
     <body>
         <div class="container">
             <div class="jumbotron">
-
+                <img class="logo_jumbotron" src="{% static 'img/share.png' %}"/>
                 {% block header_content %}
                 {% endblock %}
             </div>
