--- a/api/webview/templates/webview/view_records.html
+++ b/api/webview/templates/webview/view_records.html
@@ -6,16 +6,17 @@
     <div class="col-xs-12">
     {% for document in document_list %}
         <div class="row">
-
-                <p></p>
-
                 <div class="col-xs-6">
                 <p>######## RAW ###############</p>
-                    {{ document.raw }}
+                    <pre class="prettyprint">
+                        <p id="raw" style="white-space: pre-wrap;">{{ document.raw }}</p>
+                    </pre>
                 </div>
                 <div class="col-xs-6">
                 <p>######## NORMALLIZED ###############</p>
-                    {{ document.normed }}
+                    <pre class="prettyprint">
+                        <p id="normed" style="white-space: pre-wrap;">{{ document.normed }}</p>
+                    </pre>
                 </div>
         </div>
         <hr>
@@ -23,5 +24,41 @@
 
     </div>
 </div>
+
+{% endblock %}
+
+{% block javascript_bottom %}
+    <script src="https://cdn.rawgit.com/google/code-prettify/master/loader/run_prettify.js"></script>
+
+    <script>
+
+        function syntaxHighlight(json) {
+            console.log(typeof json);
+            if (typeof json != 'string') {
+                 json = JSON.stringify(json, undefined, 4);
+            }
+            json = json.replace(/&/g, '&amp;').replace(/</g, '&lt;').replace(/>/g, '&gt;');
+            return json.replace(/("(\\u[a-zA-Z0-9]{4}|\\[^u]|[^\\"])*"(\s*:)?|\b(true|false|null)\b|-?\d+(?:\.\d*)?(?:[eE][+\-]?\d+)?)/g, function (match) {
+                var cls = 'number';
+                if (/^"/.test(match)) {
+                    if (/:$/.test(match)) {
+                        cls = 'key';
+                    } else {
+                        cls = 'string';
+                    }
+                } else if (/true|false/.test(match)) {
+                    cls = 'boolean';
+                } else if (/null/.test(match)) {
+                    cls = 'null';
+                }
+                return '<span class="' + cls + '">' + match + '</span>';
+            });
+        }
+
+        var old_json = document.getElementById("normed").innerHTML;
+        var new_json = syntaxHighlight(old_json);
+        document.getElementById("normed").innerHTML = new_json;
+
+    </script>
 
 {% endblock %}
