--- a/api/webview/templates/webview/base.html
+++ b/api/webview/templates/webview/base.html
@@ -23,5 +23,6 @@
 
         {% block javascript_bottom %}
         {% endblock %}
+        <script src="{% static 'js/run_prettify.js' %}"></script>
     </body>
 </html>
