--- a/api/webview/templates/webview/view_records.html
+++ b/api/webview/templates/webview/view_records.html
@@ -4,6 +4,24 @@
 
 <div class="row">
     <div class="col-xs-12">
+    <div>
+        <form action="{% url 'view_records' %}" method="post">
+        {% csrf_token %}
+            <div class="dropdown">
+              <button class="btn btn-default dropdown-toggle" type="button" data-toggle="dropdown">
+                Select a Source
+                <span class="caret"></span>
+              </button>
+            <input class="btn btn-primary" type="submit" value="OK" />
+            <ul class="dropdown-menu">
+                {% for entry in sources %}
+                <li>{{ entry }}</li>
+                {% endfor %}
+            </ul>
+            </div>
+        </form>
+
+    </div>
     {% for document in document_list %}
         <div class="row">
                 <div class="col-xs-6">
@@ -24,41 +42,5 @@
 
     </div>
 </div>
-
-{% endblock %}
-
-{% block javascript_bottom %}
-    <script src="https://cdn.rawgit.com/google/code-prettify/master/loader/run_prettify.js"></script>
-
-    <script>
-
-        function syntaxHighlight(json) {
-            console.log(typeof json);
-            if (typeof json != 'string') {
-                 json = JSON.stringify(json, undefined, 4);
-            }
-            json = json.replace(/&/g, '&amp;').replace(/</g, '&lt;').replace(/>/g, '&gt;');
-            return json.replace(/("(\\u[a-zA-Z0-9]{4}|\\[^u]|[^\\"])*"(\s*:)?|\b(true|false|null)\b|-?\d+(?:\.\d*)?(?:[eE][+\-]?\d+)?)/g, function (match) {
-                var cls = 'number';
-                if (/^"/.test(match)) {
-                    if (/:$/.test(match)) {
-                        cls = 'key';
-                    } else {
-                        cls = 'string';
-                    }
-                } else if (/true|false/.test(match)) {
-                    cls = 'boolean';
-                } else if (/null/.test(match)) {
-                    cls = 'null';
-                }
-                return '<span class="' + cls + '">' + match + '</span>';
-            });
-        }
-
-        var old_json = document.getElementById("normed").innerHTML;
-        var new_json = syntaxHighlight(old_json);
-        document.getElementById("normed").innerHTML = new_json;
-
-    </script>
 
 {% endblock %}
